core/codegen/tests/ui-fail/catch_type_errors.stderr
error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
 --> $DIR/catch_type_errors.rs:5:1
  |
5 | #[catch(404)]
  | ^^^^^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
  |
  = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `bool: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:11:1
   |
11 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `bool`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0308]: mismatched types
  --> $DIR/catch_type_errors.rs:18:7
   |
17 | #[catch(404)]
   | ------------- expected due to this
18 | fn f3(_request: bool) -> usize {
   |       ^^^^^^^^^^^^^^ expected `&rocket::Request<'_>`, found `bool`
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r rocket::Request<'s>) -> _`
                 found fn item `fn(bool) -> usize {f3}`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:23:1
   |
23 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
   |
   = note: required by `rocket::response::Responder::respond_to`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
